--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit=1.36.0
-pandas=2.2.2
-numpy=1.26.4
-plotly=5.22.0
-openpyxl=3.1.2
+streamlit>=1.38
+pandas>=2.2
+numpy>=1.26
+openpyxl>=3.1
+
